# cv-playground

./: .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
cmake/: Config.cmake.in  FindTCMalloc.cmake  FindTensorFlowCC.cmake  instruction_set.cmake  project_settings.cmake  sanitizers.cmake
doc/: TensorFlowSupport.md
docker/: Dockerfile.debian-buster  Dockerfile.opensuse-15.1  Dockerfile.tensorflow-ubuntu-20.04  Dockerfile.ubuntu-20.04
docker/dev/: Dockerfile.tensorflow-ubuntu-20.04  Dockerfile.ubuntu-20.04
samples/scripts/: README.md  brighten.pg  convert_to_gray.pg  difference.pg  histogram_equalization.pg  pooling.pg  smooth.pg
src/: CMakeLists.txt
src/appimageproc/: CMakeLists.txt  main.cpp
src/appvideoproc/: CMakeLists.txt  main.cpp  progress_monitor.cpp  progress_monitor.hpp
src/libcvpg/: CMakeLists.txt
src/libcvpg/core/: exception.cpp  exception.hpp  histogram.cpp  histogram.hpp  image.cpp  image.hpp  meta_data.cpp  meta_data.hpp  metadata.cpp  metadata.hpp  multi_array.cpp  multi_array.hpp
src/libcvpg/imageproc/: tiling.cpp  tiling.hpp
src/libcvpg/imageproc/algorithms/: border_mode.cpp  border_mode.hpp  convert_to_gray.cpp  convert_to_gray.hpp  convert_to_rgb.cpp  convert_to_rgb.hpp  histogram_equalization.cpp  histogram_equalization.hpp  hog.cpp  hog.hpp  k_means.cpp  k_means.hpp  otsu_threshold.cpp  otsu_threshold.hpp  paint_meta.cpp  paint_meta.hpp  tfpredict.cpp  tfpredict.hpp  tiling.cpp  tiling.hpp
src/libcvpg/imageproc/algorithms/tiling/: algorithms.hpp  and.cpp  and.hpp  convert_to_gray.cpp  convert_to_gray.hpp  diff.cpp  diff.hpp  histogram.cpp  histogram.hpp  mean.cpp  mean.hpp  multiply_add.cpp  multiply_add.hpp  or.cpp  or.hpp  parameters.hpp  pooling.cpp  pooling.hpp  resize.cpp  resize.hpp  scharr.cpp  scharr.hpp  sobel.cpp  sobel.hpp  threshold.cpp  threshold.hpp
src/libcvpg/imageproc/algorithms/tiling/functors/: histogram.hpp  image.hpp  task.hpp
src/libcvpg/imageproc/scripting/: algorithm_set.cpp  algorithm_set.hpp  image_processor.cpp  image_processor.hpp  item.cpp  item.hpp  processing_context.cpp  processing_context.hpp
src/libcvpg/imageproc/scripting/algorithms/: and.cpp  and.hpp  base.hpp  binary_threshold.cpp  binary_threshold.hpp  convert_to_gray.cpp  convert_to_gray.hpp  convert_to_rgb.cpp  convert_to_rgb.hpp  diff.cpp  diff.hpp  histogram_equalization.cpp  histogram_equalization.hpp  hog_image.cpp  hog_image.hpp  input.cpp  input.hpp  k_means.cpp  k_means.hpp  mean.cpp  mean.hpp  multiply_add.cpp  multiply_add.hpp  or.cpp  or.hpp  paint_meta.cpp  paint_meta.hpp  parameter.cpp  parameter.hpp  parameter_set.cpp  parameter_set.hpp  pooling.cpp  pooling.hpp  resize.cpp  resize.hpp  scharr.cpp  scharr.hpp  sobel.cpp  sobel.hpp  tfpredict.cpp  (+3 more)
src/libcvpg/imageproc/scripting/detail/: compiler.cpp  compiler.hpp  container_node.cpp  container_node.hpp  graph.cpp  graph.hpp  handler.cpp  handler.hpp  node.hpp  parallel_node.cpp  parallel_node.hpp  parser.cpp  parser.hpp  sequence_node.cpp  sequence_node.hpp  single_node.cpp  single_node.hpp
src/libcvpg/imageproc/scripting/diagnostics/: markdown_formatter.hpp  typedefs.hpp
src/libcvpg/imageproc/tiling/: diff.cpp  diff.hpp  mean.cpp  mean.hpp  multiply_add.cpp  multiply_add.hpp
src/libcvpg/videoproc/: any_stage.hpp  frame.cpp  frame.hpp  packet.cpp  packet.hpp  stage_data_handler.cpp  stage_data_handler.hpp  stage_fsm.cpp  stage_fsm.hpp  stage_parameters.hpp  update_indicator.cpp  update_indicator.hpp
src/libcvpg/videoproc/pipelines/: any_pipeline.hpp  file_to_file.cpp  file_to_file.hpp  parameters.hpp  rtsp_to_file.cpp  rtsp_to_file.hpp
src/libcvpg/videoproc/processors/: frame.cpp  frame.hpp  interframe.cpp  interframe.hpp
src/libcvpg/videoproc/sinks/: file.cpp  file.hpp
src/libcvpg/videoproc/sources/: file.cpp  file.hpp  rtsp.cpp  rtsp.hpp
test/: CMakeLists.txt  main.cpp
test/core/: histogram.cpp  image.cpp  meta_data.cpp  metadata.cpp  multi_array.cpp
test/imageproc/algorithms/: histogram_equalization.cpp  hog.cpp
test/imageproc/scripting/: convert_to_gray.cpp  diff.cpp  image_processor.cpp  input.cpp  mean.cpp  multiply_add.cpp  scharr.cpp  sobel.cpp
test/videoproc/: packet.cpp  stage_data_handler.cpp
